[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["ben1009"]
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
rand = "0.9.2"
regex = "1.5.5"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "native-tls-alpn",
    "gzip",
] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
surf = "2.3.2"
tempfile = "3.9.0"

[lib]
doctest = false
test = true
# bench = false

[package.metadata.cargo-machete]
ignored = ["openssl", "serde"]
